# marvin_pro_moveit

./: .gitignore  README.md  README_MoveIt_Bridge_ZH.md
src/marvin_description/: package.xml  setup.py
src/marvin_description/launch/: description_only_m6.launch.py
src/marvin_description/urdf/: M6-S-L-CCS-696-V4.urdf.xacro  M6-S-R-CCS-696-V4.urdf.xacro  marvin_CCS_m6.urdf.xacro  rviz2.rviz  stand.urdf.xacro
src/marvin_real_control/: CMakeLists.txt  package.xml  setup.py
src/marvin_real_control/launch/: jointstate_to_marvin_cmd.launch.py  marvin_moveit_bridge_demo.launch.py  marvin_real_controller.launch.py
src/marvin_real_control/src/marvin_real_control/: __init__.py  jointstate_to_marvin_cmd.py  marvin_moveit_bridge_demo.py  marvin_real_controller.py  trajectory_to_marvin_cmd.py
src/marvin_real_control/test/: test_moveit_bridge_logic.py
src/marvin_robot_config/: .setup_assistant  CMakeLists.txt  package.xml
src/marvin_robot_config/config/: initial_positions.yaml  joint_limits.yaml  marvin_robot.ros2_control.xacro  marvin_robot.srdf  marvin_robot.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml
src/marvin_robot_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/robot_node/marvin_description/: CMakeLists.txt  package.xml  readme.md  stand.urdf
src/robot_node/marvin_description/launch/: description_only_m3.launch.py  description_only_m6.launch.py  display_m6_cam.launch.py  displaym3.launch.py  displaym6.launch.py  displaym6dm.launch.py  displaym6m.launch.py
src/robot_node/marvin_description/urdf/: M6-S-L-CCS-696-V4.urdf.xacro  M6-S-R-CCS-696-V4.urdf.xacro  marvin_CCS_cam_m6.urdf.xacro  marvin_CCS_m3.urdf  marvin_CCS_m3.urdf.xacro  (+8 more)
src/robot_node/marvin_msgs/: CMakeLists.txt  package.xml
src/robot_node/marvin_ros2_control_wb/: CMakeLists.txt  NULLSPACE_IK_CHANGES.md  README_hardware_sim.md  package.xml
(+11 files in other folders)
